--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="2DArray_DS.cpp" />
     <ClCompile Include="ConsoleApplication1.cpp" />
     <ClCompile Include="DataStructures_Arrays_ArraysDS.cpp" />
     <ClCompile Include="stdafx.cpp">
