--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="2DArray_DS.cpp" />
     <ClCompile Include="ConsoleApplication1.cpp" />
     <ClCompile Include="DataStructures_Arrays_ArraysDS.cpp" />
+    <ClCompile Include="LeftRotation.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
