adding Prefix sum problem called Algorithmic crush from hacker rank

--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="2DArray_DS.cpp" />
+    <ClCompile Include="AlgorithmicCrush.cpp" />
     <ClCompile Include="ConsoleApplication1.cpp" />
     <ClCompile Include="DataStructures_Arrays_ArraysDS.cpp" />
     <ClCompile Include="LeftRotation.cpp" />
