--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="ConsoleApplication1.cpp" />
     <ClCompile Include="DataStructures_Arrays_ArraysDS.cpp" />
     <ClCompile Include="LeftRotation.cpp" />
+    <ClCompile Include="LinkedListPrintAllElements.cpp" />
     <ClCompile Include="SparseArray.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
